modified:   client/nbproject/project.properties

--- a/client/nbproject/project.properties
+++ b/client/nbproject/project.properties
@@ -1,7 +1,10 @@
-application.desc=\u65e7\u30b0\u30c3\u30c7\u30a4\u7248OpenDolphin Ver.1.9.4.1
-application.homepage=
-application.title=OpenDolphin 1.9.4.1
-application.vendor=appcel & Open\u2605Star
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.run.all.processors=true
+application.desc=\u65e7\u30b0\u30c3\u30c7\u30a4\u7248OpenDolphin Ver.1.9.5
+application.homepage=http://dolphin.openstar.biz
+application.title=OpenDolphin 1.9.5
+application.vendor=OpenStar Inc.
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -37,7 +40,6 @@ file.reference.dcm4che-imageio-rle-2.0.12.jar=../lib/dcm4che-imageio-rle-2.0.12.
 file.reference.dcm4che.jar=../lib/dcm4che.jar
 file.reference.dicom.jar=../lib/dicom.jar
 file.reference.ejb3-persistence.jar=../lib/ejb3-persistence.jar
-file.reference.hibernate-annotations.jar=../lib/hibernate-annotations.jar
 file.reference.iText-2.0.8.jar=../lib/iText-2.0.8.jar
 file.reference.iTextAsian.jar=../lib/iTextAsian.jar
 file.reference.jai_codec.jar=../lib/jai_codec.jar
@@ -57,6 +59,8 @@ file.reference.velocity-dep-1.4.jar=../lib/velocity-dep-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${libs.beans-binding.classpath}:\
+    ${libs.hibernate-support.classpath}:\
     ${file.reference.activation.jar}:\
     ${file.reference.AppFramework.jar}:\
     ${file.reference.clibwrapper_jiio.jar}:\
@@ -69,7 +73,6 @@ javac.classpath=\
     ${file.reference.dcm4che-imageio-rle-2.0.12.jar}:\
     ${file.reference.dicom.jar}:\
     ${file.reference.iText-2.0.8.jar}:\
-    ${file.reference.hibernate-annotations.jar}:\
     ${file.reference.iTextAsian.jar}:\
     ${file.reference.jai_codec.jar}:\
     ${file.reference.jai_core.jar}:\
@@ -83,12 +86,12 @@ javac.classpath=\
     ${file.reference.swing-worker-1.1.jar}:\
     ${file.reference.velocity-1.4.jar}:\
     ${file.reference.velocity-dep-1.4.jar}:\
-    ${file.reference.SocketLib.jar}:\
-    ${libs.hibernate-support.classpath}:\
-    ${libs.beans-binding.classpath}
+    ${file.reference.SocketLib.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=true
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=1.7
 javac.target=1.7
 javac.test.classpath=\
@@ -114,6 +117,7 @@ jnlp.signed=false
 main.class=open.dolphin.client.Dolphin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
